X.26 (#889)
* Initial branch of x.26

* Error on deprecated (#862)

* Review deprecated methods, change build to error on deprecation

* <release>8</release>

* Fix compilation on Java 21

* Don't use UnsafeText here

* Don't use UnsafeText here

* Use release 8 only for Java 11+

* MacOSX issue on modification date

* Clarify why the @Deprecated is commented out.

* Clarify why the @Deprecated is commented out.

* Deprecate due x.26

* reduced compatibility

* Remove se.eris.notnull.instrument

* Wire to 2.26ea0

* X.26 common compile flags (#865)

* Initial branch of x.26

* Error on deprecated (#862)

* Review deprecated methods, change build to error on deprecation

* <release>8</release>

* Fix compilation on Java 21

* Don't use UnsafeText here

* Don't use UnsafeText here

* Use release 8 only for Java 11+

* MacOSX issue on modification date

* Clarify why the @Deprecated is commented out.

* Clarify why the @Deprecated is commented out.

* Use a common configuration for the compiler-plugin where deprecation warnings cause the build to fail

* Tidy up compiler setting and some warnings

* X.26 lint all (#868)

* Add -Xlint:all,-options as default compiler

* Add -Xlint:all,-options as default compiler

* Add -Xlint:all,-options as default compiler

* @SuppressWarnings({"rawtypes"}) -> @SuppressWarnings("rawtypes")

* Minor fixes

* Narrow the SuppressWarnings

* X.26 lint all (#869)

* Add -Xlint:all,-options as default compiler

* Add -Xlint:all,-options as default compiler

* Add -Xlint:all,-options as default compiler

* @SuppressWarnings({"rawtypes"}) -> @SuppressWarnings("rawtypes")

* Minor fixes

* Narrow the SuppressWarnings

* Add -Xlint:all,-options as default compiler

* Fix deprecated field

* Fix deprecated field

* Tidy up code base

* resolve merge issues

* resolve Javadoc issues

* Added fail on warning lint for Javadoc, and rawtypes fixes for B